ops/staging/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: course-app-staging
spec:
  replicas: 2
  selector:
    matchLabels:
      app: course-app-staging
  template:
    metadata:
      labels:
        app: course-app-staging
    spec:
      containers:
        - name: course-app-staging
          image: ajayt8374/course_app_backend:82eef825c836b6eb35a631dd0bbe8298782eb46d
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
          volumeMounts:
            - name: secret
              mountPath: /usr/src/app/.env
              subPath: .env
      volumes:
        - name: secret
          secret:
            secretName: course-app-staging-secret
            items:
              - key: .env
                path: .env
