ops/staging/services.yml
apiVersion: v1
kind: Service
metadata:
  name: course-app-staging
spec:
  selector:
    app: course-app-staging
  ports:
  - port: 80
    targetPort: 3000
  type: ClusterIP
